src/test/ui/missing/missing-block-hint.stderr
error: expected `{`, found `=>`
  --> $DIR/missing-block-hint.rs:3:18
   |
LL |         if (foo) => {}
   |         --       ^^ expected `{`
   |         |
   |         this `if` expression has a condition, but no block

error: expected `{`, found `bar`
  --> $DIR/missing-block-hint.rs:7:13
   |
LL |         if (foo)
   |         -- this `if` expression has a condition, but no block
LL |             bar;
   |             ^^^-
   |             |
   |             expected `{`
   |             help: try placing this code inside a block: `{ bar; }`

error: aborting due to 2 previous errors

